--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     ext.gradle_version = '3.1.3'
+    ext.retrofit_version = '2.4.0'
     repositories {
         google()
         jcenter()
