--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.50'
-    ext.gradle_version = '3.1.3'
-    ext.retrofit_version = '2.4.0'
+    ext {
+        kotlin_version = '1.2.50'
+        gradle_version = '3.1.3'
+        retrofit_version = '2.4.0'
+        koin_version = '0.9.3'
+        aac_version = '1.1.1'
+    }
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
