--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         retrofit_version = '2.4.0'
         koin_version = '0.9.3'
         aac_version = '1.1.1'
+        livedata_version = '1.1.0'
     }
 
     repositories {
