--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation "android.arch.lifecycle:viewmodel:$aac_version"
     implementation "android.arch.lifecycle:livedata:$livedata_version"
 
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    kapt "com.android.databinding:compiler:3.1.1"
 
     // testing
     testImplementation 'junit:junit:4.12'
