Create login with random background image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,16 +7,23 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.pedro.feedsense"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+
+        debug {
+            buildConfigField 'String', 'BASE_URL', '"http://127.0.0.1:3000/"'
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField 'String', 'BASE_URL', '"https://api-tcc-rtfs.herokuapp.com/"'
         }
     }
     dataBinding {
@@ -43,6 +50,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata:2.0.0'
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // testing
     testImplementation 'junit:junit:4.12'
