Configure for Fabric

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:targetSandboxVersion="1"
     package="com.example.pedro.feedsense">
 
     <application android:name=".App"
@@ -8,6 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".modules.login.LoginActivity"
             android:windowSoftInputMode="adjustResize|stateHidden"
@@ -19,6 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".modules.home.HomeActivity" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="f4f20d1c10f8b0474509e1198eb1097a3493cfe8" />
     </application >
 
     <uses-permission android:name="android.permission.INTERNET" />
