--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
@@ -17,7 +18,7 @@ android {
 
         debug {
             buildConfigField 'String', 'BASE_URL', '"https://api-tcc-rtfs.herokuapp.com/"'
-//            buildConfigField 'String', 'BASE_URL', '"http://127.0.0.1:3000/"'
+//            buildConfigField 'String', 'BASE_URL', '"http://localhost:3000/"'
         }
 
         release {
@@ -57,6 +58,10 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.android.support:support-compat:28'
 
+    // fabric
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
+        transitive = true
+    }
 
     // testing
     testImplementation 'junit:junit:4.12'
