--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,19 +43,18 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
     implementation "org.koin:koin-android-architecture:$koin_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata:2.0.0'
-
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
     implementation 'com.android.support:support-compat:28'
 
     // fabric
