--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
