Change base url to prod

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
     buildTypes {
 
         debug {
-            buildConfigField 'String', 'BASE_URL', '"http://10.0.2.2:3000/"'
-//            buildConfigField 'String', 'BASE_URL', '"https://api-tcc-rtfs.herokuapp.com/"'
+//            buildConfigField 'String', 'BASE_URL', '"http://10.0.2.2:3000/"'
+            buildConfigField 'String', 'BASE_URL', '"https://api-tcc-rtfs.herokuapp.com/"'
         }
 
         release {
