Show active sessions available to join

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity android:name=".modules.login.LoginActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:windowSoftInputMode="stateVisible|adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".modules.home.HomeActivity"
             android:windowSoftInputMode="stateHidden|adjustResize"/>
